# openapi-jsonld-remover

./: README.md  input.yaml  main.py  output.yaml  pyproject.toml
